--- a/HW25/HW25/Views/AlbomsAndPhotosFlow.storyboard
+++ b/HW25/HW25/Views/AlbomsAndPhotosFlow.storyboard
@@ -46,10 +46,10 @@
             </objects>
             <point key="canvasLocation" x="-285" y="-153"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Photos CollectionVC-->
         <scene sceneID="5N5-YM-Tz6">
             <objects>
-                <collectionViewController id="f9p-aO-khy" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="PhotosCollectionVC" id="f9p-aO-khy" customClass="PhotosCollectionVC" customModule="HW25" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="wcW-tU-aBp">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
